--- a/src/WatchRunDocker.csproj
+++ b/src/WatchRunDocker.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <_WatchTarget>$(MSBuildProjectDirectory)\obj\$(MSBuildProjectFile).dotnetwatch.g.targets</_WatchTarget>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0" />
@@ -10,9 +11,6 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0" />
   </ItemGroup>
-  <PropertyGroup>
-    <BaseIntermediateOutputPath>..\build\$(AssemblyName)\obj</BaseIntermediateOutputPath>
-    <IntermediateOutputPath Condition=" '$(PlatformName)' == 'AnyCPU' ">$(BaseIntermediateOutputPath)$(Configuration)\</IntermediateOutputPath>
-    <IntermediateOutputPath Condition=" '$(PlatformName)' != 'AnyCPU' ">$(BaseIntermediateOutputPath)$(PlatformName)\$(Configuration)\</IntermediateOutputPath>
-  </PropertyGroup>
+   <!-- This is a temporary workaround suggested to handle a known issue with watcher -->
+   <Import Project="$(_WatchTarget)" Condition="Exists('$(_WatchTarget)')" />  
 </Project>
